[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rioextract"
authors = [{name = "Your Name"}]
version = "0.1.0"
description = "A simple CLI tool intended for FRC teams to extract log files from the RoboRIO."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
rioextract = "rioextract.main:app"